# liballocs

./: .gitignore  .gitmodules  .hgignore  .hgtags  Dockerfile  LICENSE  Makefile  Makefile.am  README  README.md  autogen.sh  config.mk.in  configure.ac  liballocs.pc.in
.circleci/: build-dependencies.txt  config.yml  test-dependencies.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Documentation/: allocsld-debugging.txt  allocsld-malloc-instrumentation.txt  allocsld.txt  bigallocs.txt  debugging-tips.txt  init-order.txt  issue-90-cxx-toolchain.md  liballocs-architecture.md  malloc-indexing.txt  malloc-overview.txt  malloc-wrapping.txt  overview-runtime.txt  overview-toolchain.txt  pipeline.md  private-malloc.txt  projects.md  static-symbols.txt
allocsld/: Makefile  allocinstr.c  allocsld.h  allocsld.h.mk  asmutil.h  chain.c  cover-tracks.h  cover-tracks.inc.c  entry.c  main.c  malloc-patcher.c  return-hook.S
buildtest/: Dockerfile.template  Makefile  rules.mk
buildtest/circleci-default/: Makefile  README  scrape-circleci.awk
buildtest/debian-buster/: Dockerfile
buildtest/debian-stretch/: Dockerfile
buildtest/ubuntu-18.04/: Dockerfile
buildtest/ubuntu-20.04/: Dockerfile
contrib/: Makefile  libantlr3c-3.4-getparent-allow-null.patch  librunt  libsystrap
doc/: custom-allocators.md  projects.md
examples/: Makefile  client-allocator-elf.c  elf-allocators.c  elf-allocators.h  elf-refs.c  elf-refs.h  emit-asm.c  emit-asm.h
footprints/: Makefile.am  binary_ops.c  control_flow.c  eval.c  exprs.c  footprints.c  footprints_antlr_macros.h  idents.c  linux-syscall-ifacetypes.c  objects.c  parser.c  perform_syscall.c  printer.c  subscripts.c  test_footprints.c  test_syscalls.c  unary_ops.c  unions.c  values.c  version-script
footprints/ocaml/: Makefile  ocaml_test_syscalls.ml  syscalls.ml  syscalls.mli
include/: addrmap.h  allocmeta-defs.h  allocmeta.h  allocs.h  allocsites.h  allocsmt.h  bitmap.h  bitops.h  fake-libunwind.h  footprints.h  footprints_enums.h  footprints_funcs.h  footprints_types.h  generic_malloc_index.h  heap_index.h  liballocs.h  liballocs_cil_inlines.h  liballocs_config.h.in  liballocs_ext.h  libcrunch.h  linear_malloc_index.h  malloc-meta.h  malloc_usable_size_hack.h  maps.h  memtable.h  metavec.h  pageindex.h  perform_syscall.h  relf.h  uniqtype-bfs.h  uniqtype-defs.h  uniqtype.h  vas.h  vec.h
lib/: Makefile  debug-funcs.sh
lib/ocaml/: .gitignore
scripts/: guess-allocsite-types.sh
src/: Makefile  addrlist.c  addrmap.c  allocsites.c  allocsmt.h  cache.c  counters.c  dlmalloc-ext.c  dlmalloc-includes.h  dummy_thread_locals.c  dummyweaks.c  err.c  fake-libunwind.c  heap_index_hooks.c  ifunc.c  init.c  interval_tree.cc  l0index.c  liballocs.c  liballocs_private.h  libcrunch.c  libcrunch_private.h  libdumpsmaps.c  lifetime_policies.c  maps.c  meta-dso-util.c  meta-dso.c  nonshared_hook_wrappers.c  noop.c  pageindex.c  prefix_tree.c  preload.c  private-libc.c  private-malloc-plain.lds  private-malloc-wrapped.lds  query.c  rt-uniqtypes.c  segv.c  stubs.c.example  systrap.c  (+7 more)
src/allocators/: alloca.c  anon.c  auxv.c  brk.c  default-lib-malloc.c  elf-file.c  file.c  generic_malloc.c  generic_small.c  ld-so-malloc.c  mmap.c  packed-seq.c  sbrk.c  stack.c  stackframe.c  static-file.c  static-section.c  static-segment.c  static-symbol.c  static.c
tests/: Makefile
tests/abort-alloca-clang/: abort-alloca-clang.c  mk.inc
tests/addrtaken-allocator/: addrtaken-allocator.c  mk.inc
tests/alloca/: alloca.c  mk.inc
tests/alloca-clang/: abort-alloca-clang.c  alloca-clang.c  mk.inc
tests/allocsite-id/: allocsite-id.c
tests/anon-aliases/: anon-aliases.c  header.h  lib1.c  lib2.c  lib3.c  mk.inc  sameheader.h
tests/bit-fields/: bit-fields.c  mk.inc
tests/char-allocs/: char-allocs.c
tests/cxx-new/: cxx-new.cpp  mk.inc
tests/heap-index/: multi-level.c
tests/hello-build-id/: hello-build-id.c  mk.inc
tests/hello-via-wrapper/: hello-via-wrapper.c  mk.inc
tests/lib-test/: lib-test.c  mk.inc
tests/malloc-from-dso/: dso.c  malloc-from-dso.c  mk.inc
tests/malloc-in-exe/: malloc-in-exe.c  mk.inc
tests/metavec-layout/: metavec-layout.c
tests/no-unbind-self/: mk.inc  no-unbind-self.c
tests/nopreload-alloca/: nopreload-alloca.c
tests/offsetof/: mk.inc  offsetof.c
tests/packed-seq-walk/: packed-seq-walk.c
tests/plugin-hello/: mk.inc  plugin-hello.c
tests/ptr-to-opaque/: mk.inc  other-cu.c  ptr-to-opaque.c
tests/query-inlcache/: mk.inc  query-inlcache.c
tests/realloc-multi-union/: realloc-multi-union.c
tests/relf-auxv-dynamic/: mk.inc  relf-auxv-dynamic.c
tests/relf-auxv-static/: mk.inc  relf-auxv-static.c
tests/section-group/: Makefile  lib1.c  lib1a.c  lib2.c  lib2a.c  section-group.c
tests/simple-client/: mk.inc  simple-client.c
tests/simple-multi-alloc/: mk.inc  simple-multi-alloc.c
tests/sizeof-derived/: sizeof-derived.c
tests/sizeof-subtract/: sizeof-subtract.c
tests/sloppy-dumptypes/: sloppy-dumptypes.c
tests/stack-types/: stack-types.c
tests/stack-walk/: mk.inc  stack-walk.c
tests/string-lit/: mk.inc  string-lit.c
tests/subobject-span/: subobject-span.c
tests/uniqtype-make-precise/: uniqtype-make-precise.c
tests/uniqtype-walk/: mk.inc  uniqtype-walk.c
tests/unit-tests/: Makefile
tools/: Makefile  Makefile.allocsites  alias-linker-opts-for-base-types.sh  allocs-install  allocs-ldflags  allocs-wrapper  allocscompilerwrapper.py  allocsites-info.cpp  allocsites-info.hpp  allocsites.cpp  allocstubs.c  alloctypes.cpp  callsites.cpp  compilerwrapper.py  cufiles.cpp  debian-print-srcpkgs.sh  debug-funcs.sh  dump-symlinks.sh  dumpptrs.cpp  dumpsyscalls.cpp  dumptypes.cpp  dwarf-machine.hpp  dwarftypes.cpp  extrasyms.cpp  find-allocated-type-size.cpp  frametypes.cpp  frametypes2.cpp  gather-objallocs.sh  gather-srcallocs.sh  gather-srcmemacc.sh  gold-plugin.cpp  helpers.cpp  helpers.hpp  ifacetypes.cpp  interp-pad.S  merge-allocs.sh  metavector.cpp  noopgen.cpp  objcopy-unbind-syms-naive.sh  objcopy-unbind-syms-real.sh  (+21 more)
tools/lang/: Makefile
tools/lang/c/: Makefile  (+1 more)
(+44 files in other folders)
